# go/gen/v1/oas_response_encoders_gen.go
@@ -93,6 +93,19 @@ func encodeTaskTaskIDAttemptsGetResponse(response []Attempt, w http.ResponseWrit
 	return nil
 }
 
+func encodeTaskTaskIDGetResponse(response *Task, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := jx.GetEncoder()
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+	return nil
+}
+
 func encodeTasksGetResponse(response []Task, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(200)
